--- a/accelerate_config.yaml
+++ b/accelerate_config.yaml
@@ -1,7 +1,7 @@
 compute_environment: LOCAL_MACHINE
 deepspeed_config:
   # gradient_accumulation_steps: 4
-  gradient_clipping: 1.0
+  gradient_clipping: 0.01 #100.0
   offload_optimizer_device: cpu
   offload_param_device: none
   zero3_init_flag: true
@@ -21,5 +21,5 @@ main_process_port: null
 main_training_function: main
 mixed_precision: fp16
 num_machines: 1
-num_processes: 2
+num_processes: 4
 use_cpu: false
