--- a/config.yaml
+++ b/config.yaml
@@ -38,7 +38,7 @@ dataset:
 
 training:
   resume_from_checkpoint:
-    default: latest 
+    default: checkpoint-2347 
     type: str
     help: Path to checkpoint to resume from
   epochs:
@@ -84,7 +84,7 @@ optimizer:
 learning_rate_scheduler:
   lr:
     # default: 0.0001
-    default: 1e-5 #3e-5
+    default: 5e-6 #1e-5 #3e-5
     type: float
     help: Learning rate for training
   lr_scheduler:
