--- a/accelerate_config.yaml
+++ b/accelerate_config.yaml
@@ -1,18 +1,11 @@
 compute_environment: LOCAL_MACHINE
 deepspeed_config:
-  # gradient_accumulation_steps: 4
-  gradient_clipping: 0.01 #100.0
+  gradient_clipping: 0.01 
   offload_optimizer_device: cpu
   offload_param_device: none
   zero3_init_flag: true
   zero3_save_16bit_model: true
   zero_stage: 3
-  # zero_optimization:
-  #   stage: 3
-  #   overlap_comm: true
-  #   contiguous_gradients: true
-  #   reduce_bucket_size: 5e8
-  #   stage3_prefetch_bucket_size: 5e8
 distributed_type: DEEPSPEED
 fsdp_config: {}
 machine_rank: 0
