Added separate prediction pipline for e2e. Added separate validation code for e2e with utils

--- a/accelerate_config.yaml
+++ b/accelerate_config.yaml
@@ -1,6 +1,6 @@
 compute_environment: LOCAL_MACHINE
 deepspeed_config:
-  gradient_clipping: 0.5 #0.01 
+  gradient_clipping: 1.0 #0.01 #0.5 
   offload_optimizer_device: cpu
   offload_param_device: none
   zero3_init_flag: true
@@ -14,5 +14,5 @@ main_process_port: null
 main_training_function: main
 mixed_precision: bf16
 num_machines: 1
-num_processes: 4
+num_processes: 2
 use_cpu: false
