--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,20 @@
 # General
-matplotlib==3.10.0
+matplotlib
 
 # PyTorch
-torch==2.5.1
-torchaudio==2.5.1
-torchvision==0.20.1
+# torch==2.8.0
+# torchvision==0.22.0
 
 # Hugging Face
-accelerate==1.2.1
-diffusers==0.32.1
-transformers==4.47.1
+accelerate==1.7.0
+diffusers==0.33.1
+transformers==4.52.0
 
 # Multi-GPU
 deepspeed==0.15.4
 
 # Tracking
-wandb==0.19.1
+# wandb==0.19.1
 
 # Data Augmentation
 albumentations
