--- a/requirements.txt
+++ b/requirements.txt
@@ -2,13 +2,14 @@
 matplotlib
 
 # PyTorch
-torch==2.8.0
-torchvision==0.22.0
+# torch==2.8.0
+# torchvision==0.22.0
 
 # Hugging Face
 accelerate==1.7.0
 diffusers==0.33.1
 transformers==4.52.0
+hf_transfer
 
 # Multi-GPU
 deepspeed==0.15.4
